# VIO-Launcher

./: .gitignore  Cargo.toml  README.md  build.bat
.github/workflows/: release.yml
theseus/: Cargo.toml
theseus/src/: error.rs  lib.rs
theseus/src/api/: account_manager.rs  download.rs  ely_auth.rs  logs.rs  minecraft_auth.rs  mod.rs  settings.rs
theseus/src/api/profile/: auto_update.rs  backup.rs  conflict.rs  console_logger.rs  mod.rs  optimize.rs  screenshot.rs  skin.rs
theseus/src/event/: emit.rs
theseus/src/launcher/: args.rs  authlib_injector.rs  mod.rs
theseus/src/state/: dirs.rs  discord.rs  ely_auth.rs  minecraft_auth.rs  mod.rs  profiles.rs  settings.rs
theseus_gui/: index.html  package-lock.json  package.json  pnpm-lock.yaml
theseus_gui/src/: App.vue  main.js  routes.js
theseus_gui/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.macos.conf.json
theseus_gui/src-tauri/icons/: icon.icns
theseus_gui/src-tauri/msi/: main.wxs
theseus_gui/src-tauri/src/: error.rs  main.rs
theseus_gui/src-tauri/src/api/: account.rs  auth.rs  ely_auth_plugin.rs  import.rs  jre.rs  logs.rs  metadata.rs  mod.rs  mr_auth.rs  pack.rs  process.rs  profile.rs  profile_create.rs  settings.rs  tags.rs  utils.rs
theseus_gui/src/assets/render/: index.js
theseus_gui/src/assets/stylesheets/: global.scss
theseus_gui/src/components/: GridDisplay.vue  RowDisplay.vue
theseus_gui/src/components/ui/: AccountsCard.vue  Breadcrumbs.vue  ErrorModal.vue  ExportModal.vue  IncompatibilityWarningModal.vue  InstallConfirmModal.vue  InstanceCreationModal.vue  JavaSelector.vue  ModInstallModal.vue  ModpackVersionModal.vue  ProjectCard.vue  RunningAppBar.vue  SearchCard.vue
theseus_gui/src/helpers/: account.js  auth.js  branding.js  ely_auth.js  settings.js  update.js  utils.js
theseus_gui/src/languages/: en_us.json  ru_ru.json
theseus_gui/src/pages/: Browse.vue  Index.vue  Library.vue  Settings.vue
theseus_gui/src/pages/instance/: Index.vue  Logs.vue  Mods.vue  Options.vue
theseus_gui/src/pages/project/: Index.vue  Version.vue  Versions.vue
theseus_gui/src/store/: instances.js  language.js  theme.js
theseus_macros/: Cargo.toml
theseus_playground/: Cargo.toml
theseus_playground/src/: main.rs
(+14 files in other folders)
