[package]
name = "vio_gui"
version = "0.7.2"
description = "VIO Launcher - Modern Minecraft Launcher"
authors = ["VIO Team"]
license = "MIT"
repository = "https://github.com/VIO-Launcher/VIO"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
vio = { path = "../../theseus", features = ["tauri"] }

serde_json = "1.0.111"
serde = { version = "1.0.195", features = ["derive"] }

tauri = { version = "1.6", features = ["app-all", "devtools", "dialog", "dialog-confirm", "dialog-open", "macos-private-api", "os-all", "protocol-asset", "shell-open", "window-close", "window-create", "window-hide", "window-maximize", "window-minimize", "window-set-decorations", "window-show", "window-start-dragging", "window-unmaximize", "window-unminimize"] }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-deep-link = "0.1.2"

tokio = { version = "1.35.1", features = ["full"] }
thiserror = "1.0.56"
tokio-stream = { version = "0.1.14", features = ["fs"] }
futures = "0.3.30"
daedalus = {version = "0.1.27", features = ["bincode"] }
chrono = "0.4.31"

dirs = "5.0.1"

url = "2.5.0"
uuid = { version = "1.6.1", features = ["serde", "v4"] }
os_info = "3.7.0"

tracing = "0.1.40"
tracing-error = "0.2.0"

sentry = "0.32.2"
sentry-rust-minidump = "0.7.0"

lazy_static = "1.4.0"
once_cell = "1.19.0"
reqwest = "0.11.23"

[target.'cfg(not(target_os = "linux"))'.dependencies]
window-shadows = "0.2.1"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25.0"
objc = "0.2.7"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
